@@ -1,3 +1,13 @@
+2019-01-31  Timothy Hatcher  <timothy@apple.com>
+
+        Fix LSAppLink deprecation warnings.
+        https://bugs.webkit.org/show_bug.cgi?id=194097
+
+        Unreviewed build fix.
+
+        * UIProcess/ios/WKActionSheetAssistant.mm:
+        (-[WKActionSheetAssistant _appendOpenActionsForURL:actions:elementInfo:]):
+
 2019-01-30  Simon Fraser  <simon.fraser@apple.com>
 
         [Mac] Implement basic hit testing in the scrolling tree
